--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,7 +9,7 @@ description = "A Django extension that allows customizing the admin list view"
 authors = [{ name = "rafael-frs-a" }]
 license = { file = "LICENSE" }
 readme = "README.md"
-keywords = ["django", "admin", "list", "view", "customization"]
+keywords = ["django", "admin", "list", "view", "list_display", "customization"]
 requires-python = ">=3.10"
 classifiers = [
   "Development Status :: 3 - Alpha",
