--- a/tox.ini
+++ b/tox.ini
@@ -5,7 +5,9 @@ envlist =
   py{310,311,312}-django{32,40,41,42,50,51,52}
 
 [testenv]
+allowlist_externals = playwright
 deps =
+  requests
   django32: Django>=3.2,<3.3
   django40: Django>=4.0,<4.1
   django41: Django>=4.1,<4.2
@@ -13,11 +15,10 @@ deps =
   django50: Django>=5.0,<5.1
   django51: Django>=5.1,<5.2
   django52: Django>=5.2,<5.3
+commands_pre =
+  playwright install --with-deps chromium
 commands =
-  python -c "import os; os.remove('demo_project/db.sqlite3') if os.path.exists('demo_project/db.sqlite3') else None"
-  python demo_project/manage.py migrate
-  python demo_project/manage.py loaddata demo_project/fixtures/initial_data.json
-  python demo_project/manage.py runserver
+  python scripts/run_and_test.py {posargs}
 
 [testenv:lint]
 extras = dev
