--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,15 +4,16 @@ build-backend = "setuptools.build_meta"
 
 [project]
 name = "django-admin-flexlist"
-version = "0.1.0"
-description = "A Django extension that allows customizing the admin list view"
+version = "0.1.1"
+description = "A Django extension that allows users to reorder list view columns and toggle their visibility"
 authors = [{ name = "rafael-frs-a" }]
 license = { file = "LICENSE" }
 readme = "README.md"
-keywords = ["django", "admin", "list", "view", "list_display", "customization"]
+keywords = ["django", "admin", "list view", "column toggle", "column reorder", "drag and drop", "list_display", "customize admin", "django admin customization"]
+long_description_content_type = "text/markdown"
 requires-python = ">=3.10"
 classifiers = [
-  "Development Status :: 3 - Alpha",
+  "Development Status :: 4 - Beta",
   "Framework :: Django",
   "Intended Audience :: Developers",
   "License :: OSI Approved :: MIT License",
@@ -20,13 +21,22 @@ classifiers = [
   "Programming Language :: Python :: 3.10",
   "Programming Language :: Python :: 3.11",
   "Programming Language :: Python :: 3.12",
+  "Framework :: Django :: 3.2",
+  "Framework :: Django :: 4.0",
+  "Framework :: Django :: 4.1",
+  "Framework :: Django :: 4.2",
+  "Framework :: Django :: 5.0",
+  "Framework :: Django :: 5.1",
+  "Framework :: Django :: 5.2",
 ]
 dependencies = [
   "django>=3.2,<=5.2",
 ]
 
 [project.urls]
-Home = "https://github.com/rafael-frs-a/django-admin-flexlist"
+Homepage = "https://github.com/rafael-frs-a/django-admin-flexlist"
+Documentation = "https://github.com/rafael-frs-a/django-admin-flexlist"
+Source = "https://github.com/rafael-frs-a/django-admin-flexlist"
 
 [project.optional-dependencies]
 dev = [
