--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,11 +5,11 @@ build-backend = "setuptools.build_meta"
 [project]
 name = "django-admin-flexlist"
 version = "0.1.1"
-description = "A Django extension that allows users to reorder list view columns and toggle their visibility"
+description = "A Django extension that allows users to reorder and toggle visibility of admin list view, app index, and dashboard elements"
 authors = [{ name = "rafael-frs-a" }]
 license = { file = "LICENSE" }
 readme = "README.md"
-keywords = ["django", "admin", "list view", "column toggle", "column reorder", "drag and drop", "list_display", "customize admin", "django admin customization"]
+keywords = ["django", "admin", "list view", "app index", "dashboard", "toggle visibility", "reorder elements", "drag and drop", "list_display"]
 requires-python = ">=3.10"
 classifiers = [
   "Development Status :: 4 - Beta",
