--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,7 +4,7 @@ build-backend = "setuptools.build_meta"
 
 [project]
 name = "django-admin-flexlist"
-version = "1.0.3"
+version = "1.0.4"
 description = "A Django extension that allows users to reorder and toggle visibility of admin list view, app index, and dashboard elements"
 authors = [{ name = "rafael-frs-a" }]
 license = { file = "LICENSE" }
@@ -27,7 +27,7 @@ classifiers = [
   "Framework :: Django :: 5.2",
 ]
 dependencies = [
-  "django>=4.1,<=5.2",
+  "django>=4.1,<5.3",
 ]
 
 [project.urls]
